Fix display bug on IE
Concerning the left panel of scorecard-details

--- a/mon-pix/app/styles/components/_scorecard-details.scss
+++ b/mon-pix/app/styles/components/_scorecard-details.scss
@@ -16,6 +16,7 @@
   &__left {
     flex-grow: 1;
     padding: 0px 30px 30px 30px;
+    max-width: 100%;
 
     @include device-is('desktop') {
       padding: 0 30px;
